--- a/prog03.html
+++ b/prog03.html
@@ -12,11 +12,11 @@ y.value = parseInt(q.value)+parseInt(r.value); ">
 		<td>3</td> <td>4</td> <td>5</td> <td>3</td> <td>4</td> <td>6</td> <td>4</td> <td>5</td> <td>6</td>
 	</tr>
 	<tr>
-		Watson: <input type="number" size="5" id="a" value="0"> + <input type="number" size="5"
-		id="b" value="0"> = <output name="x" for"a b"/>
+		Watson: <input type="number" size="1" id="a" value="0"> + <input type="number" size="1"
+		id="b" value="0"> = <output name="x" for"a r"/>
 	</tr>
 	<tr>
-		Spieth: <input type="number" size="5" id="q" value="0"> + <input type="number" size="5"
+		Spieth: <input type="number" size="1" id="q" value="0"> + <input type="number" size="1"
 		id="r" value="0"> = <output name="x" for"q r"/>
 	</tr>
 </table>
