--- a/prog03.html
+++ b/prog03.html
@@ -13,11 +13,11 @@ y.value = parseInt(q.value)+parseInt(r.value); ">
 	</tr>
 	<tr>
 		Watson: <input type="number" size="1" id="a" value="0"> + <input type="number" size="1"
-		id="b" value="0"> = <output name="x" for"a r"/>
+		id="b" value="0"> = <output name="x" for"a b"/>
 	</tr>
 	<tr>
 		Spieth: <input type="number" size="1" id="q" value="0"> + <input type="number" size="1"
-		id="r" value="0"> = <output name="x" for"q r"/>
+		id="r" value="0"> = <output name="y" for"q r"/>
 	</tr>
 </table>
 
