--- a/prog03.html
+++ b/prog03.html
@@ -4,20 +4,17 @@ y.value = parseInt(q.value)+parseInt(r.value); ">
 
 <table>
 	<tr>
-		<td>Hole</td><td>1</td> <td>2</td> <td>3</td> <td>4</td> <td>5</td> <td>6</td> <td>7</td> <td>8</td> <td>9</td>
-		<td>10</td> <td>11</td> <td>12</td> <td>13</td> <td>14</td> <td>15</td> <td>16</td> <td>17</td> <td>18</td>
+		<td>Hole </td><td>1</td> <td>2</td> <td>3</td> 
 	</tr>
 	<tr>
-		<td>Par</td><td>4</td> <td>3</td> <td>4</td> <td>5</td> <td>4</td> <td>3</td> <td>3</td> <td>4</td> <td>4</td>
-		<td>3</td> <td>4</td> <td>5</td> <td>3</td> <td>4</td> <td>6</td> <td>4</td> <td>5</td> <td>6</td>
+		<td>Par </td><td>4</td> <td>3</td> <td>4</td> 
+	<tr>
+		Watson: <input t="number" size="5" id="a" value="0"> + <input t="number" size="1"
+		id="b" value="0"> + <input t="number" size="1" id="c" value="0"> = <output name="x" for"a b c"/>
 	</tr>
 	<tr>
-		Watson: <input type="number" size="1" id="a" value="0"> + <input type="number" size="1"
-		id="b" value="0"> = <output name="x" for"a b"/>
-	</tr>
-	<tr>
-		Spieth: <input type="number" size="1" id="q" value="0"> + <input type="number" size="1"
-		id="r" value="0"> = <output name="y" for"q r"/>
+		Spieth: <input type="number" size="1" id="q" value="0"> + <input type="number" size="5"
+		id="r" value="0"> + <input t="number" size="1" id="s" value="0"> = <output name="y" for"q r s"/>
 	</tr>
 </table>
 
