--- a/prog03.html
+++ b/prog03.html
@@ -1,6 +1,6 @@
 
-<form oninput = "x.value = parseInt(a.value) + parseInt(b.value);
-y.value = parseInt(q.value)+parseInt(r.value); ">
+<form oninput = "x.value = parseInt(a.value) + parseInt(b.value) + parseInt(c.value;
+y.value = parseInt(q.value) + parseInt(r.value) + parseInt(s.value); ">
 
 <table>
 	<tr>
