--- a/prog03.html
+++ b/prog03.html
@@ -3,6 +3,7 @@
 y.value = parseInt(q.value) + parseInt(r.value) + parseInt(s.value); ">
 
 <table>
+
 	<tr>
 		<td>Hole </td><td>1</td> <td>2</td> <td>3</td> 
 	</tr>
@@ -17,5 +18,12 @@ y.value = parseInt(q.value) + parseInt(r.value) + parseInt(s.value); ">
 		id="r" value="0"> + <input t="number" size="1" id="s" value="0"> = <output name="y" for"q r s"/>
 	</tr>
 </table>
+
+<fieldset>
+		<legend>Ranking:</legend>
+			Score: <input type="text"><br>
+			Place: <input type="text">
+</fieldset>	
+	
 
 </form> 
