--- a/prog03.html
+++ b/prog03.html
@@ -1,29 +1,26 @@
 
 <form oninput = "x.value = parseInt(a.value) + parseInt(b.value) + parseInt(c.value;
-y.value = parseInt(q.value) + parseInt(r.value) + parseInt(s.value); ">
+y.value = parseInt(q.value)+parseInt(r.value)+parseInt(s.value); ">
 
-<table>
+<table border="1">
+	<fieldset>
+		<legend>Ranking:</legend>
+			Place: <input type="text">
+	</fieldset>
 
 	<tr>
-		<td>Hole </td><td>1	</td> <td>2	</td> <td>3	</td> 
+		<td>Hole </td><td>1</td> <td>2</td> <td>3</td> 
 	</tr>
 	<tr>
-		<td>Par  </td><td>4	</td> <td>3	</td> <td>4	</td> 
+		<td>Par </td><td>4</td> <td>3</td> <td>4</td> 
 	<tr>
-		Watson: <input t="number" size="1" id="a" value="0"> + <input t="number" size="1"
-		id="b" value="0"> + <input t="number" size="1" id="c" value="0"> = <output name="x" for"a b c"/>
+		<td>Watson:</td> <td><input t="number" size="1" id="a" value="0"></td> <td><input t="number" size="1"
+		id="b" value="0"></td> <td><input t="number" size="1" id="c" value="0"></td> <output name="x" for"a b c"/>
 	</tr>
 	<tr>
-		Spieth: <input type="number" size="1" id="q" value="0"> + <input type="number" size="1"
-		id="r" value="0"> + <input t="number" size="1" id="s" value="0"> = <output name="y" for"q r s"/>
+		<td>Spieth:</td> <td><input t="number" size="1" id="q" value="0"></td> <td><input t="number" size="1"
+		id="r" value="0"></td> <td><input t="number" size="1" id="s" value="0"></td> <output name="y" for"q r s"/>
 	</tr>
 </table>
 
-<fieldset>
-		<legend>Ranking:</legend>
-			Score: <input type="text"><br>
-			Place: <input type="text">
-</fieldset>	
-	
-
-</form> 
+</form> 	
