--- a/prog03.html
+++ b/prog03.html
@@ -1,4 +1,10 @@
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="prog03.css" />
+</head>
 
+
+<body>
 <form oninput = "x.value = parseInt(a.value) + parseInt(b.value) + parseInt(c.value;
 y.value = parseInt(q.value)+parseInt(r.value)+parseInt(s.value); ">
 
@@ -23,4 +29,5 @@ y.value = parseInt(q.value)+parseInt(r.value)+parseInt(s.value); ">
 	</tr>
 </table>
 
-</form> 	
+</form>
+</body> 	
