--- a/prog03.html
+++ b/prog03.html
@@ -9,11 +9,7 @@
 y.value = parseInt(q.value)+parseInt(r.value)+parseInt(s.value); ">
 
 <table border="1">
-	<fieldset>
-		<legend>Ranking:</legend>
-			Place: <input type="text">
-	</fieldset>
-
+	<p> Enter what each player shot for the Three-hole tournament. </p>
 	<tr>
 		<td>Hole </td><td>1</td> <td>2</td> <td>3</td> 
 	</tr>
@@ -28,6 +24,21 @@ y.value = parseInt(q.value)+parseInt(r.value)+parseInt(s.value); ">
 		id="r" value="0"></td> <td><input t="number" size="1" id="s" value="0"></td> <output name="y" for"q r s"/>
 	</tr>
 </table>
+<p> 
+
+
+</P>
+<fieldset>
+	<p> Select who won the tournament. </p>
+		<legend>Masters:</legend>
+			Place:
+		<select>
+			  <option value="1st">1st Watson</option>
+			  <option value="2nd">2nd Watson</option>
+			  <option value="1stS">1st Spieth</option>
+			  <option value="2ndS">2nd Spieth</option>
+		</select> 
+</fieldset>
 
 </form>
 </body> 	
